# qingque-sr

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  exportmod.py  go.mod  pub.ps1  pub.rs  resetdb.py  rustfmt.toml  setup.go
_cfg/: README.md  avatar.toml  server.toml
_cfg/srtools/: astral_trio_and_herta.json  my_stellaron_hunters.json
_configs_/: README.md  avatar.toml  config.json  hotfix.json  scene.toml  server.toml
_configs_/srtools/: archery.json  saber_carry_f2p.json
cfg-utility/: Cargo.toml
cfg-utility/src/: lib.rs  main.rs
cfg-utility/src/avatar/: mod.rs
cfg-utility/src/hotfix/: mod.rs
cfg-utility/src/scene/: mod.rs
cfg-utility/src/server/: mod.rs
cfg-utility/src/srtools/: mod.rs
cmd/server/: main.go
config/: helper.go
config/bot/: bot.go  handler.go  utils.go
config/hotfix/: hotfix.go  utils.go
config/lx/: lx.go
config/player/: player.go  utils.go
config/ports/: ports.go  utils.go
config/scene/: scene.go  utils.go
config/srtools/: specials.go  srtools.go  utils.go
configs/: Cargo.toml
configs/src/: avatar.rs  hotfix.rs  lib.rs  logger.rs  scene.rs  server.rs
configs/src/avatar/: mod.rs
configs/src/hotfix/: mod.rs
configs/src/scene/: mod.rs
configs/src/server/: mod.rs
configs/src/srtools/: default_config.rs  mod.rs
db/: Cargo.toml
db/src/: lib.rs
db/src/sdk/: hotfix.rs  mod.rs  user.rs
game-server/: Cargo.toml
game-server/src/: conn.rs  lib.rs  main.rs  packet.rs  util.rs
game-server/src/cmd/: avatar.rs  battle.rs  chat.rs  friend.rs  item.rs  lineup.rs  mission.rs  mod.rs  player.rs  scene.rs
game-server/src/handlers/: dummy.rs  mod.rs
game-server/src/handlers/avatar/: get_avatar_data.rs  get_multi_path_avatar_info.rs
game-server/src/handlers/battle/: mod.rs  p_v_e_battle_result.rs  pve_battle_result.rs  start_cocoon_stage.rs
game-server/src/handlers/item/: get_bag.rs
game-server/src/handlers/lineup/: get_all_lineup_data.rs  get_cur_lineup_data.rs  mod.rs
game-server/src/handlers/login/: player_get_token.rs  player_login.rs  player_login_finish.rs
game-server/src/handlers/mission/: get_mission_status.rs  mod.rs
game-server/src/handlers/player/: get_basic_info.rs  mod.rs  player_heart_beat.rs
game-server/src/handlers/scene/: get_cur_scene_info.rs  get_scene_map_info.rs  mod.rs
game-server/src/network/: conn.rs  mod.rs  packet.rs  router.rs
game-sv/: Cargo.toml
game-sv/src/: main.rs
game-sv/src/packet/: control.rs  mod.rs  net.rs
gameserver/: gameserver.go
gameserver/connection/: connection.go
gameserver/handler/: handler.go
gameserver/handler/avatar/: GetAvatarData.go
gameserver/packet/: packet.go
gameserver/session/: session.go
main/: Cargo.toml  avatar.toml  config.json  server.toml
main/_config/: README.md  avatar.toml  hotfix.json
main/cfg-server/: Cargo.toml
main/cfg-server/src/: lib.rs
main/cfg-server/src/address/: mod.rs
main/cfg-server/src/avatar/: mod.rs
main/cfg-server/src/hotfix/: mod.rs
main/cfg-server/src/scene/: mod.rs
main/cfg-server/src/srtools/: default_config.rs  mod.rs
main/net-game/: Cargo.toml
main/net-game/src/: main.rs
main/net-game/src/handlers/: mod.rs
main/net-game/src/handlers/avatar/: get_avatar_data.rs  get_multi_path_avatar_info.rs  mod.rs
main/net-game/src/handlers/battle/: p_v_e_battle_result.rs  start_cocoon_stage.rs
main/net-game/src/handlers/item/: get_bag.rs  mod.rs
main/net-game/src/handlers/lineup/: get_all_lineup_data.rs  get_cur_lineup_data.rs
main/net-game/src/handlers/login/: mod.rs  player_get_token.rs  player_login.rs  player_login_finish.rs
main/net-game/src/handlers/mission/: get_mission_status.rs
main/net-game/src/handlers/player/: get_basic_info.rs  player_heart_beat.rs
main/net-game/src/handlers/scene/: get_cur_scene_info.rs  mod.rs
main/net-game/src/network/: conn.rs  packet.rs  router.rs
main/net-game/src/utils/: srtools.rs  time.rs
main/net-msg/: Cargo.toml  CmdId-2.6.5x.json  SR-2.6.5x.proto  build.rs
main/net-msg/src/: lib.rs
main/net-sdk/: Cargo.toml
main/net-sdk/src/: main.rs
main/net-sdk/src/handlers/: mod.rs
main/net-sdk/src/handlers/auth/: account.rs  mod.rs  product.rs
main/net-sdk/src/handlers/dispatch/: mod.rs  query_dispatch.rs  query_gateway.rs
main/net-sdk/src/middleware/: logging.rs
main/net-sdk/src/router/: auth.rs  dispatch.rs
migrations/: 20250321034258_init.sql
pb/: StarRail.proto
sdk-server/: Cargo.toml
sdk-server/src/: auth.rs  auto_hotfix.rs  dispatch.rs  lib.rs  logger.rs  main.rs
sdk-server/src/handlers/auth/: account.rs  account_risky_api_check.rs  mod.rs  product.rs  product_account_ma_passport_api_app_login_by_password.rs  product_combo_granter_login_v2_login.rs  product_mdk_shield_api_login.rs
sdk-server/src/handlers/dispatch/: query_dispatch.rs  query_gateway.rs
sdk-server/src/middleware/: logging.rs  mod.rs
sdk-server/src/router/: auth.rs  dispatch.rs  mod.rs
sdk-sv/: Cargo.toml
sdk-sv/src/: main.rs
sdk-sv/src/app/: mod.rs  request.rs  response.rs  router.rs
sdk-sv/src/app/db/: hotfix.rs  user.rs
sdk-sv/src/handlers/: middleware.rs  mod.rs
sdk-sv/src/handlers/auth/: account_register.rs  combo_before_verify.rs  combo_granter_login.rs  mod.rs  my_register.rs  risky_api_check.rs  shield_api_login.rs  shield_api_verify.rs
sdk-sv/src/handlers/dispatch/: mod.rs  query_dispatch.rs  query_gateway.rs
sdk-sv/src/handlers/misc/: admin_mi18n.rs  compare_protocol_version.rs  config_experiment_list.rs  config_sdk_combo.rs  device_get_ext_list.rs  device_get_fp.rs  get_agreement_infos.rs  get_alert_ann.rs  get_alert_pic.rs  get_ann_list.rs  granter_api_get_config.rs  h5log.rs  mod.rs  red_dot_list.rs  sdk_data_upload.rs  shield_api_load_config.rs  sw_precache.rs
sdkserver/: sdkserver.go
sdkserver/auth/: auth.go
sdkserver/dispatch/: dispatch.go
sdkserver/extra/: extra.go  pages.go
sdkserver/logger/: logger.go
srtools-manager/: Cargo.toml
srtools-manager/src/: main.rs
uni-server/: Cargo.toml
uni-server/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
(+15 files in other folders)
