[workspace]
resolver = "3"
members = [ "db","sdk-sv", "utils"]
exclude = ["sr-proto"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Yulian <yuvlian@naver.com>"]
license = "MIT"
repository = "https://github.com/yuvlian/stalel"

[workspace.dependencies]
ansi_term = "0.12.1"
axum = { version = "0.8.1", features = ["macros"] } # debug_handler is a cool attribute
bcrypt = "0.17.0"
chrono = "0.4.40"
db = { path = "db/" }
envie = "0.2.1"
paste = "1.0.15"
prost = "0.13.4"
rand = "0.9.0"
rbase64 = "2.0.3"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "derive"] }
sr-proto = { path = "sr-proto/" }
tokio = { version = "1.44.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "bytes"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utils = { path = "utils/" }

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
panic = "unwind"

[profile.release.build-override]
strip = true
opt-level = 3
codegen-units = 1

[profile.dev]
panic = "abort"
codegen-units = 64

[profile.dev.build-override]
codegen-units = 64
