[workspace]
resolver = "3"
members = ["game-server", "sdk-server", "configs", "srtools-manager", "uni-server"]
exclude = ["sr-proto", "heartxecutor"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/yuvlian/qingque-sr"

[workspace.dependencies]
amia-packet = { git = "https://github.com/yuvlian/amia-codec", package = "amia-packet", rev = "2cdfba2", features = ["tokio"]}
configs = { path = "configs/" }
sr-proto = { path = "sr-proto/" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum = "0.8.4"
tokio = { version = "1.45.0", features = [
    "rt",
    "io-util",
    "io-std",
    "net",
    "macros",
    "fs"
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.8.22"
rbase64 = "2.0.3"
bytes = "1.10.1"
paste = "1.0.15"
ansi_term = "0.12.1"
game-server = { path = "game-server/" }
sdk-server = { path = "sdk-server/" }
egui = "0.31.1"
eframe = "0.31.1"
open = "5.3.2"
reqwest = "0.12.15"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.release.build-override]
strip = true
opt-level = 3
codegen-units = 1

[profile.dev]
panic = "abort"
incremental = true
codegen-units = 384

[profile.dev.build-override]
incremental = true
codegen-units = 384
