[package]
name = "cfg-utility"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sr-proto.workspace = true
eframe.workspace = true
egui.workspace = true

[[bin]]
name = "cfg-manager"
path = "src/main.rs"

[lib]
name = "cfg_utility"
path = "src/lib.rs"
