[package]
name = "db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bcrypt.workspace = true
rand.workspace = true
rbase64.workspace = true
regex.workspace = true
reqwest.workspace = true
sqlx.workspace = true
sr-proto.workspace = true
tracing.workspace = true
utils.workspace = true
