[package]
name = "game-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bytes.workspace = true
tokio.workspace = true
sr-proto.workspace = true
configs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
paste.workspace = true
ansi_term.workspace = true

[[bin]]
name = "game-server"
path = "src/main.rs"

[lib]
name = "game_server"
path = "src/lib.rs"
