[package]
name = "game-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
tokio.workspace = true
serde_json.workspace = true
sr-proto.workspace = true
configs.workspace = true
paste.workspace = true
tracing.workspace = true
amia-packet.workspace = true

[[bin]]
name = "game-server"
path = "src/main.rs"

[lib]
name = "game_server"
path = "src/lib.rs"
