[package]
name = "game-sv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
byteorder.workspace = true
bytes.workspace = true
kcp-zs.workspace = true
sr-proto.workspace = true
thiserror.workspace = true
tokio.workspace = true
