[workspace]
resolver = "2"
members = ["net-msg", "net-game", "net-sdk", "cfg-server"]

[workspace.dependencies]
cfg-server = { path = "cfg-server/" }
net-msg = { path = "net-msg/"}
prost = "0.13.3"
prost-types = "0.13.3"
prost-build = "0.13.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
axum = "0.7.9"
axum-server = "0.7.1"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.8.19"
rbase64 = "2.0.3"
bytes = "1.9.0"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
# set this shit to "unwind"
# if you dont want it to always crash
# when it panics
panic = "abort"

[profile.release.build-override]
strip = true
opt-level = 3
codegen-units = 1
