[package]
name = "sdk-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sr-proto.workspace = true
configs.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rbase64.workspace = true
reqwest.workspace = true

[[bin]]
name = "sdk-server"
path = "src/main.rs"

[lib]
name = "sdk_server"
path = "src/lib.rs"
