[package]
name = "sdk-sv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sr-proto.workspace = true
tokio.workspace = true
tracing.workspace = true
utils.workspace = true
