[package]
name = "srtools-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
egui.workspace = true
eframe.workspace = true
open = "5.3.2"
