[package]
name = "utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ansi_term.workspace = true
bcrypt.workspace = true
envie.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
