[package]
name = "net-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
net-msg.workspace = true
cfg-server.workspace = true
axum.workspace = true
axum-server.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rbase64.workspace = true